<resources>
    <string name="app_name">myAppsWithDB</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="staff">Staff</string>
    <string name="student">Student</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">LOGIN</string>
    <string name="passwordText">Password</string>
    <string name="usernameText">Username</string>
    <string name="emailText">Email</string>
    <string name="welcome_username">Welcome, [Username]!</string>
    <string name="view_profile">View Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="default_web_client_id">634610807541-9oums1e1liauj72svhba1ed96ae22ns5.apps.googleusercontent.com</string>
</resources>