<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:autofillHints=""
        android:hint="@string/emailText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText"
        app:layout_constraintVertical_bias="0.062"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="52dp"
        android:text="@string/usernameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:hint="@string/passwordText"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        app:layout_constraintVertical_bias="0.074"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/signInGooglebutton"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/sign_in_with_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/or"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.063" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uitmImg">

        <RadioButton
            android:id="@+id/staffRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginTop="76dp"
            android:text="@string/staff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uitmImg" />

        <RadioButton
            android:id="@+id/studRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="128dp"
            android:text="@string/student"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/staffRadio"
            app:layout_constraintTop_toBottomOf="@+id/ufutureImg" />
    </RadioGroup>

    <TextView
        android:id="@+id/forgotPassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_your_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <ImageView
        android:id="@+id/uitmImg"
        android:layout_width="165dp"
        android:layout_height="85dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logouitm"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/ufutureImg"
        android:layout_width="165dp"
        android:layout_height="85dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoufuture"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="26dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="83dp"
        app:layout_constraintBottom_toBottomOf="@+id/signInGooglebutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/googleg_standard_color_18" />

</androidx.constraintlayout.widget.ConstraintLayout>